<resources>
    <string name="app_name">Calculator</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">−</string>
    <string name="times" translatable="false">×</string>
    <string name="obelus" translatable="false">÷</string>
    <string name="clear_button" translatable="false">C</string>
    <string name="clear_entry_button" translatable="false">CE</string>
    <string name="del_button" translatable="false">Del</string>
    <string name="result_button" translatable="false">=</string>

    <string name="operand_one">First Operand</string>
    <string name="operand_two">Second Operand</string>
    <string name="result">Result</string>

    <string name="hide_labels">Hide Labels</string>
    <string name="show_labels">Show Labels</string>
    <string name="about">About</string>
    <string name="about_message">App developed by Ivan21. Thank you for using it.</string>
    <string name="cannot_divide_by_zero">Can\'t divide by Zero.</string>
</resources>
