<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/resultPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resultGuideline"
        android:theme="@style/Theme.AppCompat.Light"
        android:background="@color/colorResultPanel">

        <android.support.constraint.Guideline
            android:id="@+id/resultLabelGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/operand1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="@id/resultPanel"
            app:layout_constraintBottom_toTopOf="@id/operand1"
            app:layout_constraintLeft_toLeftOf="@id/operand1"
            app:layout_constraintRight_toRightOf="@id/operand1"
            android:text="@string/operand_one"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/button_text_size_smaller"
            />

        <TextView
            android:id="@+id/operand1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin_start"
            app:layout_constraintTop_toBottomOf="@id/operand1Label"
            app:layout_constraintBottom_toTopOf="@id/resultLabelGuideline"
            app:layout_constraintLeft_toLeftOf="@id/resultPanel"
            app:layout_constraintRight_toLeftOf="@id/operatorLabel"
            android:textSize="28sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Foo"
            android:padding="@dimen/small_margin_start"
            android:background="@android:drawable/divider_horizontal_bright"
            />

        <TextView
            android:id="@+id/operatorLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/resultPanel"
            app:layout_constraintBottom_toTopOf="@id/resultLabelGuideline"
            app:layout_constraintStart_toEndOf="@id/operand1"
            app:layout_constraintEnd_toStartOf="@id/operand2"
            app:layout_constraintWidth_percent="0.1"
            android:text="@string/plus"
            android:gravity="center"
            android:textSize="48sp"
            />

        <TextView
            android:id="@+id/operand2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="@id/resultPanel"
            app:layout_constraintBottom_toTopOf="@id/operand2"
            app:layout_constraintLeft_toLeftOf="@id/operand2"
            app:layout_constraintRight_toRightOf="@id/operand2"
            android:text="@string/operand_two"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/button_text_size_smaller"
            />

        <TextView
            android:id="@+id/operand2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin_start"
            app:layout_constraintTop_toBottomOf="@id/operand2Label"
            app:layout_constraintBottom_toTopOf="@id/resultLabelGuideline"
            app:layout_constraintLeft_toRightOf="@id/operatorLabel"
            app:layout_constraintRight_toRightOf="@id/resultPanel"
            android:textSize="28sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Bar"
            android:padding="@dimen/small_margin_start"
            android:background="@android:drawable/divider_horizontal_textfield"
            />

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resultLabelGuideline"
            app:layout_constraintBottom_toTopOf="@id/result"
            app:layout_constraintStart_toStartOf="@id/resultPanel"
            app:layout_constraintEnd_toEndOf="@id/resultPanel"
            android:text="@string/result"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/button_text_size_smaller"
            />

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin_start"
            android:layout_marginEnd="@dimen/small_margin_start"
            android:layout_marginBottom="@dimen/small_margin_start"
            app:layout_constraintStart_toStartOf="@id/resultPanel"
            app:layout_constraintEnd_toEndOf="@id/resultPanel"
            app:layout_constraintTop_toBottomOf="@id/resultLabel"
            app:layout_constraintBottom_toBottomOf="@id/resultPanel"
            android:text="FooBar"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            android:textAlignment="center"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/resultGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/numberGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/commandPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:theme="@style/Theme.AppCompat"
        app:layout_constraintTop_toBottomOf="@id/resultPanel"
        app:layout_constraintBottom_toTopOf="@id/numberPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".08">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/commandPanel"
            app:layout_constraintStart_toStartOf="@id/commandPanel"
            app:layout_constraintEnd_toStartOf="@id/buttonClearEntry"
            app:layout_constraintBottom_toBottomOf="@id/commandPanel"
            android:text="@string/clear_button"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/buttonClearEntry"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/commandPanel"
            app:layout_constraintStart_toEndOf="@id/buttonClear"
            app:layout_constraintEnd_toStartOf="@id/buttonDel"
            app:layout_constraintBottom_toBottomOf="@id/commandPanel"
            android:text="CE"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/commandPanel"
            app:layout_constraintStart_toEndOf="@id/buttonClearEntry"
            app:layout_constraintEnd_toEndOf="@id/commandPanel"
            app:layout_constraintBottom_toBottomOf="@id/commandPanel"
            android:text="@string/del_button"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/numberPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/Theme.AppCompat"
        app:layout_constraintTop_toBottomOf="@id/commandPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/numberGuideline"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/numberPanel"
            app:layout_constraintLeft_toLeftOf="@id/numberPanel"
            app:layout_constraintRight_toLeftOf="@id/button8"
            app:layout_constraintBottom_toTopOf="@id/button4"
            android:text="7"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/numberPanel"
            app:layout_constraintLeft_toRightOf="@id/button7"
            app:layout_constraintRight_toLeftOf="@id/button9"
            app:layout_constraintBottom_toTopOf="@id/button5"
            android:text="8"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/numberPanel"
            app:layout_constraintLeft_toRightOf="@id/button8"
            app:layout_constraintRight_toRightOf="@id/numberPanel"
            app:layout_constraintBottom_toTopOf="@id/button6"
            android:text="9"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button5"
            app:layout_constraintBottom_toTopOf="@id/button1"
            android:text="4"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button8"
            app:layout_constraintLeft_toRightOf="@id/button4"
            app:layout_constraintRight_toLeftOf="@id/button6"
            app:layout_constraintBottom_toTopOf="@id/button2"
            android:text="5"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button9"
            app:layout_constraintLeft_toRightOf="@id/button5"
            app:layout_constraintRight_toRightOf="@id/numberPanel"
            app:layout_constraintBottom_toTopOf="@id/button3"
            android:text="6"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button2"
            app:layout_constraintBottom_toTopOf="@id/button0"
            android:text="1"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button5"
            app:layout_constraintLeft_toRightOf="@id/button1"
            app:layout_constraintRight_toLeftOf="@id/button3"
            app:layout_constraintBottom_toTopOf="@id/button0"
            android:text="2"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button6"
            app:layout_constraintLeft_toRightOf="@id/button2"
            app:layout_constraintRight_toRightOf="@id/numberPanel"
            app:layout_constraintBottom_toTopOf="@id/button0"
            android:text="3"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button2"
            app:layout_constraintBottom_toBottomOf="@id/numberPanel"
            app:layout_constraintStart_toStartOf="@id/button2"
            app:layout_constraintEnd_toEndOf="@id/button2"
            android:text="0"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/operationPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat"
        app:layout_constraintTop_toBottomOf="@id/commandPanel"
        app:layout_constraintStart_toEndOf="@id/numberGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/operationPanel"
            app:layout_constraintStart_toStartOf="@id/operationPanel"
            app:layout_constraintEnd_toEndOf="@id/operationPanel"
            app:layout_constraintBottom_toTopOf="@id/buttonMultiply"
            android:text="@string/obelus"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/buttonDivide"
            app:layout_constraintStart_toStartOf="@id/operationPanel"
            app:layout_constraintEnd_toEndOf="@id/operationPanel"
            app:layout_constraintBottom_toTopOf="@id/buttonSubtract"
            android:text="@string/times"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/buttonMultiply"
            app:layout_constraintStart_toStartOf="@id/operationPanel"
            app:layout_constraintEnd_toEndOf="@id/operationPanel"
            app:layout_constraintBottom_toTopOf="@id/buttonPlus"
            android:text="@string/minus"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSubtract"
            app:layout_constraintStart_toStartOf="@id/operationPanel"
            app:layout_constraintEnd_toEndOf="@id/operationPanel"
            app:layout_constraintBottom_toTopOf="@id/buttonResult"
            android:text="@string/plus"
            android:textSize="@dimen/button_text_size_small"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />


        <Button
            android:id="@+id/buttonResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/buttonPlus"
            app:layout_constraintStart_toStartOf="@id/operationPanel"
            app:layout_constraintEnd_toEndOf="@id/operationPanel"
            app:layout_constraintBottom_toBottomOf="@id/operationPanel"
            android:text="@string/result_button"
            android:textSize="@dimen/button_text_size"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClick"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>